# limnalis

./: .gitignore  CLAUDE.md  LICENSE  README.md  agents.md  pyproject.toml
.armature/: .gitignore  ARMATURE.md  agents.md  config.yaml  journal.md
.armature/hooks/: post-stop.sh
.armature/invariants/: invariants.md  registry.yaml
.armature/personas/: orchestrator.md  planner.md  reviewer-redteam.md  reviewer.md
.armature/reviews/: 3c-redteam-conformance-r2.md  3c-redteam-conformance.md  3c-redteam-integration-r2.md  3c-redteam-models.md  3c-redteam-runtime-r2.md  3c-redteam-runtime.md  3c-redteam-tests.md  a4-doc-test-r2-redteam.md  a4-doc-test-redteam.md  m4-rc-hardening-redteam.md  m4-rc-hardening.md  m4-rt2-api-version-r2.md  m4-rt2-api-version.md  m4-rt2-cli.md  (+49 more)
docs/: adequacy_execution_guide.md  architecture.md  compatibility_and_deviations.md  downstream_artifact_consumption.md  downstream_usage_examples.md  evidence_inference_guide.md  exchange_package_format.md  export_formats.md  getting_started.md  how_evaluation_works.md  implementation_notes.md  interop_overview.md  interop_schema_export.md  jsonld_rdf_note.md  limnalis_ast_pressure_points_settled_v0.2.2.md  limnalis_schema_package_readme_v0.2.2.md  linkml_projection.md  m6b_stress_bundles.md  milestone_3b_notes.md  milestone_3c_status.md  plugin_sdk_overview.md  reading_limnalis.md  release_candidate_status.md  summary_policy_guide.md  transport_semantics.md  writing_a_criterion_binding.md  writing_a_transport_handler.md  writing_an_adequacy_method.md  writing_an_evaluator_binding.md
editor/: README.md
examples/: consumer_fixture_conformance.py  consumer_grid_b1.py  consumer_jwt_b2.py  consumer_parse_normalize.py  cwt_transport_bundle.lmn  fictional_anchor_default_subtype.lmn  fictional_anchor_default_subtype_normalized_ast.json  fictional_anchor_proxy_subtype.lmn  fictional_anchor_proxy_subtype_normalized_ast.json  governance_stack_bundle.lmn  minimal_bundle.lmn  minimal_bundle_ast.json  minimal_bundle_normalized_ast.json
fixtures/: limnalis_fixture_corpus_v0.2.2.json  limnalis_fixture_corpus_v0.2.2.yaml  m6b_corpus_cases.yaml
grammar/: limnalis.lark
linkml/: limnalis_ast.linkml.yaml  limnalis_results.linkml.yaml
schemas/: limnalis_ast_schema_v0.2.2.json  limnalis_conformance_result_schema_v0.2.2.json  limnalis_fixture_corpus_schema_v0.2.2.json
spec/: Limnalis_conformance_matrix_v0.2.1.xlsx  README.md
tests/: agents.md  test_adequacy_execution.py  test_ast_models.py  test_cli_help.py  test_cli_interop.py  test_cli_plugins.py  test_cli_smoke.py  test_conformance.py  test_conformance_comparison.py  test_conformance_reports.py  test_determinism.py  test_diagnostic_fmt.py  test_doctor.py  test_editor_grammar.py  test_evidence_inference.py  test_fixture_plugin_pack.py  test_gold_case_snapshots.py  test_grid_plugin_pack.py  test_inspect_commands.py  test_integration_plugins.py  test_interop_compat.py  test_interop_envelopes.py  test_interop_export_import.py  test_interop_linkml.py  test_interop_package.py  test_interop_redteam_fixes.py  test_jwt_plugin_pack.py  test_lint_analyze.py  test_loader.py  test_m6b_api.py  test_m6b_bundles.py  test_m6b_cli.py  test_m6b_regression.py  test_normalizer.py  test_normalizer_snapshots.py  test_operator_precedence.py  test_packaging_resources.py  test_parser.py  test_parser_robustness.py  test_plugin_registry.py  (+11 more)
(+113 files in other folders)
